# coupang-sourcing

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: CLI.md  OPENCLAW.md
examples/: batch_input.csv
integration/aliprice-1688/: .gitignore  README.md  aiprice-web.js  cli.js  decrypt-cookies.js  detail-1688.js  enrich-1688.js  headless-1688.js  install.sh  package.json  sourcing-pipeline.js
integration/openclaw/: SKILL.md  config.snippet.yaml  install.sh  mcp.config.json
integration/openclaw/skill/: SKILL.md
src/coupang_sourcing/: __init__.py  __main__.py  browser.py  cli.py  config.py  cookies.py  dashboard.py  exporters.py  http_client.py  mcp_server.py  metrics.py  models.py  normalize.py  scheduler.py  service.py  storage.py  urls.py
src/coupang_sourcing/collectors/: batch.py  product.py  ranking.py  reviews.py  search.py  seller.py  store.py
tests/: conftest.py  test_exporters.py  test_metrics.py  test_normalize.py  test_ranking.py  test_scheduler.py  test_search.py  test_seller.py  test_storage.py  test_urls.py
