[project]
name = "coupang-sourcing"
version = "0.1.0"
description = "Coupang product sourcing collector — price/metadata + reviews + sourcing metrics into SQLite"
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.7",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
coupang-sourcing = "coupang_sourcing.cli:app"
coupang-sourcing-mcp = "coupang_sourcing.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coupang_sourcing"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer uses function calls (typer.Option/Argument) in argument defaults by design.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
